#
# Copyright (c) 2018, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory("atan")
add_subdirectory("atan2")
add_subdirectory("cos")
add_subdirectory("cosh")
add_subdirectory("log10")
add_subdirectory("mod")
add_subdirectory("sin")
add_subdirectory("sinh")
add_subdirectory("tan")
add_subdirectory("tanh")
